helm/charts/argocd-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-server
  namespace: argocd
  annotations:
    tailscale.com/expose: "true"
spec:
  defaultBackend:
    service:
      name: argocd-server
      port:
        number: 80
  ingressClassName: tailscale
  tls:
    - hosts:
        - argocd
